--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
